# mazao-group

./: .easignore  .editorconfig  README.md  ecosystem.config.cjs  local.properties  package.json  pnpm-lock.yaml
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/accounts/: admin.py  app_client_meta.py  auth_views.py  authentication.py  models.py  serializers.py  services.py  tests.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_location_ids.py  0003_remove_user_region.py  (+6 more)
backend/config/: api_urls.py  mail_outbound.py  settings.py  urls.py
backend/docs/: API.md  DEPLOYMENT.md  FIELD_ACTIVITY_FORM_FIELDS.md  README.md  TRACKING.md  nginx-mazao.conf
backend/farmers/: admin.py  apps.py  geo_validation.py  models.py  serializers.py  tests.py  views.py
backend/locations/: apps.py  models.py  serializers.py  tests.py  views.py
backend/mobile_sync/: apps.py  models.py  serializers.py  urls.py  views.py
backend/notifications/: admin.py  models.py  serializers.py  services.py  sms_backends.py  views.py
backend/routes/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
backend/schedules/: __init__.py  admin.py  models.py  serializers.py  tests.py  views.py
backend/site_config/: admin.py  apps.py  models.py  services.py
backend/tracking/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
backend/visits/: admin.py  dashboard_views.py  forms.py  maintenance_views.py  models.py  serializers.py  tests.py  utils.py  views.py  visit_form_schema.py
(+362 files in other folders)
