[project]
name = "mazao-backend"
version = "0.1.0"
description = "Mazao Django API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["migrations", ".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["config", "accounts", "visits", "farmers", "schedules", "notifications", "mobile_sync", "locations"]

[tool.ruff.format]
quote-style = "double"
